# GeoFabrics

./: .buildinfo  .gitattributes  .gitignore  README.md  environment.yml  environment_CI.yml  environment_linux.yml  environment_windows.yml  genindex.html  index.html  instruction.json  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.github/: pull_request_template.md
.github/workflows/: autoblack.yml  contributors.yml  linux-test.yml  python-test-package.yml  tests.yml  update_pages.yml
_sources/autoapi/: index.rst.txt
_static/: documentation_options.js
autoapi/: index.html
autoapi/__main__/: index.html
autoapi/benchmarking/: index.html
autoapi/geofabrics/: index.html
autoapi/main/: index.html
docs/: conf.py  index.rst
examples/: README.md
examples/case_study_1/: 8m_conceptual_multivariate.json  8m_interpolated_river.json  8m_measured_river.json  8m_neal_et_al.json  8m_rupp_and_smart.json  8m_unconditioned.json  8m_uniform_flow.json  catchment.geojson  river_network.geojson  riverbanks.geojson  surveyed_cross_sections.geojson
examples/case_study_2/: 4m_no_waterways.json  4m_river.json  4m_river_and_waterways.json  4m_rupp.json  4m_with_waterways.json  catchment.geojson  river_network.geojson
src/: __main__.py  benchmarking.py  geofabrics.py  main.py
src/GeoFabrics/: __init__.py  dem.py  geometry.py  lidar.py  processor.py
src/HydrologicDEMs/: __init__.py  dem.py  geometry.py  interpolator.py  lidar.py  processor.py
src/geofabrics/: __init__.py  bathymetry_estimation.py  dem.py  geometry.py  lidar.py  lidar_fetch.py  processor.py  runner.py  vector_fetch.py  version.py
tests/: base_test.py
tests/lidar_fetch/: instruction.json  lidar_fetch.py  lidar_fetch_test.py
tests/lidar_fetch_test/: instruction.json  lidar_fetch_test.py
tests/test1/: create_test_data.ipynb  instruction.json  test1.py
tests/test1/data/: lidar.laz  (+2 more)
tests/test2/: instruction.json  test2.py
tests/test_add_patches/: instruction.json  test_add_patches.py
tests/test_add_patches_ngaruroro/: instruction.json  test_add_patches.py  test_case.py
tests/test_add_stopbanks_waikanae/: instruction.json  test_case.py
tests/test_all_bathymetry_into_dem_wellington/: instruction.json  test_all_bathymetry_into_dem_wellington.py
tests/test_all_bathymetry_into_dem_wellington_with_roughness/: instruction.json  test_all_bathymetry_into_dem_wellington_with_roughness.py
tests/test_dem_generation_local_1/: instruction.json  test.py  test_case.py  test_dem_generation_local_1.py
tests/test_dem_generation_local_2/: instruction.json  test_case.py  test_dem_generation_local_2.py  test_processor_local_files_limited_offshore_res.py
tests/test_dem_generation_local_3/: instruction.json  test.py  test_case.py  test_dem_generation_local_3.py  test_processor_local_files_offshore_after.py
tests/test_dem_generation_multiple/: instruction.json  test.py  test_case.py  test_dem_generation_multiple.py  test_multiple_lidar_ground_only.py
tests/test_dem_generation_waikanae_1/: instruction.json  test_case.py
tests/test_dem_generation_waikanae_2/: instruction.json  test_case.py
tests/test_dem_generation_wellington_1/: instruction.json  test_dem_generation_wellington_1.py  test_processor_remote_tiles_wellington.py
tests/test_dem_generation_wellington_2/: instruction.json  test_dem_generation_wellington_2.py
tests/test_dem_generation_westport_1/: instruction.json  test_case.py  test_dem_generation_westport_1.py
(+334 files in other folders)
