[metadata]
name = GeoFabrics
version = 0.0.1
author = Rose Pearson
author_email = rose.pearson@niwa.co.nz
description = A package for creating hydrologically conditioned geo-fabrics (i.e. DEMs and roughness maps)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rosepearson/GeoFabrics
project_urls =
    Bug Tracker = https://github.com/rosepearson/GeoFabrics/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src